# dotfiles-py

./: .gitignore  LICENSE.rst  pyproject.toml
dotfiles/: __init__.py  cli.py  core.py
tests/: test_basic.py
