[project]
name = "dotfiles"
version = "0.6.5"
description = "Easily manage your dotfiles"
readme = "README.rst"
license = {text = "ISC"}
authors = [
    { name = "Jon Bernard", email = "jbernard@jbernard.io" }
]
requires-python = ">=3.0"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: ISC License (ISCL)"
]

[project.urls]
Homepage = "https://github.com/jbernard/dotfiles"

[project.scripts]
dotfiles = "dotfiles.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
test = [
    "pytest>=4.6.11",
]

